--- a/index.html
+++ b/index.html
@@ -1,37 +1,69 @@
 <!doctype html>
+
 <head>
-  <title>Page title</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <head>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
+</style>
+</head>
+<body>
+
+<ul>
+  <li><a class="active" href="#home">Home</a></li>
+    <li><a href="#about">About Us</a></li>
+  <li><a href="#services">Services</a></li>
+  <li><a href="#owners">Pet Owners</a></li>
+  <li><a href="#contact">Contact</a></li>
+</ul>
+  <title>Neurology Department</title>
+  <link rel="stylesheet" type="text/css" href="CECT.css">
 </head>
 
 <body>
+<h2>Clinicians</h2>
 
-<h1>Page title goes here</h1>
+<h3> Alistair McVey, DVM, DACVIM (Neurology)</h3>
+<h4>Associate Professor, Department of Veterinary Clinical Sciences </h4>
+<p> <img src="images/mcvey.png" alt="mcvey">
 
-<div id="contact">
-<h2>Contact info</h2>
-<ul>
-  <li><strong>Phone:</strong> 555-867-5309</li>
-  <li><strong>E-mail:</strong> example@example.org</li>
-  <li><strong>Website:</strong> http://www.example.org</li>
-</ul>
-</div>
+<p>Dr. McVey is the Neurology Department's chief of service and board-certified neurologist and neurosurgeon. He has more than thirty years of experience as a veterinarian and in addition to his clinical duties, he serves as a professor for the College of Veterinary Medicine students. Dr. McVey is interested in both medical and surgical neurology and has professional associations with the Honor Society of Agriculture, AVMA, and ACVIM.</p>
 
-<h2>Section 1</h2>
+<h3>Susan Arnold, DVM, DACVIM (Neurology)</h3>
+<h4>Assistant Professor, Department of Veterinary Clinical Sciences</h4>
+<p> <img src="images/Arnold.jpg" alt="arnold">
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pulvinar mi magna. Aliquam sodales felis odio, eget ultrices lorem rutrum vel. Proin eget lorem nec tellus auctor maximus ut non nunc. Vestibulum pharetra nec tortor tempus sodales. Cras nec nibh eros. Fusce quis ex at felis venenatis imperdiet ut non enim. Vestibulum quis elit eget dolor maximus blandit. Etiam ac ullamcorper est. Ut tempus nibh sit amet augue suscipit suscipit. Duis at venenatis purus, ac egestas tortor. Quisque pretium orci sit amet magna iaculis, vel varius ante tincidunt. Maecenas at velit nec sapien facilisis lacinia. Nulla non molestie est. Vestibulum ut mi lacus. Vestibulum at nisl feugiat, efficitur ex ac, ultrices metus. </p>
+<p>Dr. Arnold joined the Neurology team in August 2019 as a board-certified neurologist and neurosurgeon. She graduated from the School of Veterinary Medicine, University of Wisconsin-Madison in ___. Dr. Arnold then completed a small animal rotating internship at the University of Minnesota in 2016. She recently completed a residency in neurology and neurosurgery at the University of Georgia. (8.2016-8.2019)Dr. Arnold is particularly interested in canine neurosurgery and immunotherapy for brain tumors.</p>
 
-<p> Vivamus cursus dolor urna. Integer rhoncus ac augue condimentum placerat. Vivamus sed tristique enim. Nulla pretium mattis justo vel ornare. Donec sit amet egestas massa. Suspendisse consectetur sapien ex, a interdum urna pretium vel. Ut quis feugiat ante. Donec porttitor enim quam, in faucibus lectus imperdiet vitae. Ut metus nunc, tincidunt nec metus sit amet, sodales luctus velit. Nullam sollicitudin non nisl ac mollis. Sed a nunc et tortor posuere sodales laoreet ut odio. Sed sit amet ex malesuada, fermentum risus eget, suscipit erat. Fusce interdum purus gravida dictum maximus. Nunc quis egestas risus. Fusce fermentum, sapien vitae iaculis iaculis, velit odio rhoncus lorem, in tempus velit nunc sit amet augue. Sed ut mi libero.</p>
+<h2>Certified Veterinary Technicians</h2>
 
-<h2>Section 2</h2>
+<p>Amber joined the Neurology team in 2005. She has been a certified veterinary technician since 2001. In June 2011, she worked to obtain her Veterinary Technician Specialty (VTS) in Neurology, a rigorous application and exam documenting extensive knowledge of advanced competence in neurology. Amber is now one of nineteen technicians in the country who hold this specialized title. </p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque at iaculis dolor. Nam vestibulum vehicula tincidunt. Vestibulum quis felis magna. Ut a nunc sit amet metus suscipit posuere a nec nibh. Cras ut vehicula nisi, at vulputate lacus. Aenean tristique leo id diam hendrerit, ut cursus turpis venenatis. Morbi auctor imperdiet congue. Donec ac sem ullamcorper, tempor lacus accumsan, sodales augue. Donec quis varius neque. Pellentesque non ornare urna. Vivamus lacinia ex odio, sit amet gravida tellus porta consequat. Vivamus fringilla, lorem sit amet aliquam dapibus, ipsum est sodales velit, vitae interdum nibh odio eget sem.</p>
+<p>Anna joined the Neurology team in 2003. She has been a certified veterinary technician since ____. Anna also obtained her Veterinary Technician Specialty in Neurology in June 2011. The Neurology department is lucky to have two specialized technicians in their service.</p>
 
-<p>Aliquam volutpat est ut arcu sagittis tristique. Mauris non porta risus. Praesent volutpat eu metus in placerat. Nullam justo urna, aliquet eu pulvinar id, porttitor eu turpis. Vestibulum interdum urna at turpis cursus bibendum. Aliquam vitae lectus magna. Quisque et posuere mauris. Vestibulum id luctus ipsum, sit amet placerat erat. Donec sodales iaculis ligula sit amet sollicitudin. Suspendisse placerat venenatis ex ac vestibulum. In vestibulum ipsum velit, id aliquet orci dictum non. Proin ullamcorper at lorem et consequat. Nam augue nisi, varius ac velit eu, suscipit lacinia diam. </p>
 
-<h2>Section 3</h2>
-
-<p>Aenean elit odio, tempor sed elementum in, consequat vel mi. Vivamus non sagittis nulla. Vivamus sem massa, tempor vitae orci id, tempor imperdiet nisl. Suspendisse rutrum, arcu at lobortis consectetur, purus magna interdum massa, vel sodales massa libero sit amet augue. Morbi non condimentum ipsum. Praesent maximus lacus nec nulla vulputate, sed efficitur nisl suscipit. Suspendisse accumsan cursus magna, eget porttitor arcu varius eu.</p>
 
 </body>
+
 </html>
