--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ li a:hover {
 
 <body>
 <h2> Overview: </h2>
-
+<p>The Neurology Services at the University of Minnesota Veterinary Medical Center provides comprehensive specialty care to canine and feline patients with medical and surgical neurological conditions. These can include a range of disorders affecting the brain, spinal cord, nerves, and/or muscles. </p>
 </body>
 
 </html>
