--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@ li a:hover {
 
 <ul>
   <li><a class="active" href="#home">Home</a></li>
-    <li><a href="#about">About Us</a></li>
-  <li><a href="#services">Services</a></li>
-  <li><a href="#owners">Pet Owners</a></li>
-  <li><a href="#contact">Contact</a></li>
+    <li><a href="about-us">About Us</a></li>
+  <li><a href="services">Services</a></li>
+  <li><a href="owners">Pet Owners</a></li>
+  <li><a href="contact">Contact</a></li>
 </ul>
   <title>Neurology Department</title>
   <link rel="stylesheet" type="text/css" href="CECT.css">
