--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ li a:hover {
 
 <ul>
   <li><a class="active" href="#home">Home</a></li>
-    <li><a href="about-us">About Us</a></li>
+    <li><a href="our-team">Our Team</a></li>
   <li><a href="services">Services</a></li>
   <li><a href="owners">Pet Owners</a></li>
   <li><a href="contact">Contact</a></li>
