--- a/our-team.html
+++ b/our-team.html
@@ -31,7 +31,7 @@ li a:hover {
 <body>
 
 <ul>
-  <li><a class="active" href="#home">Home</a></li>
+  <li><a class="active" href="index.html">Home</a></li>
     <li><a href="#about">Our Team</a></li>
   <li><a href="#services">Services</a></li>
   <li><a href="#owners">Pet Owners</a></li>
