--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ li a:hover {
     <li><a href="our-team.html">Our Team</a></li>
   <li><a href="services">Services</a></li>
   <li><a href="owners">Pet Owners</a></li>
-  <li><a href="contact">Contact</a></li>
+  <li><a href="contact.html">Contact</a></li>
 </ul>
   <title>Neurology Department</title>
   <link rel="stylesheet" type="text/css" href="CECT.css">
