--- a/our-team.html
+++ b/our-team.html
@@ -35,7 +35,7 @@ li a:hover {
     <li><a href="#about">Our Team</a></li>
   <li><a href="#services">Services</a></li>
   <li><a href="#owners">Pet Owners</a></li>
-  <li><a href="#contact">Contact</a></li>
+  <li><a href="contact.html">Contact</a></li>
 </ul>
   <title>Neurology Department</title>
   <link rel="stylesheet" type="text/css" href="CECT.css">
@@ -51,7 +51,7 @@ li a:hover {
 <p>Dr. McVey is the Neurology Department's chief of service and board-certified neurologist and neurosurgeon. He has more than thirty years of experience as a veterinarian and in addition to his clinical duties, he serves as a professor for the College of Veterinary Medicine students. Dr. McVey is interested in both medical and surgical neurology and has professional associations with the Honor Society of Agriculture, AVMA, and ACVIM.</p>
 
 <h3>Susan Arnold, DVM, DACVIM (Neurology)</h3>
-<h4>Assistant Professor, Department of Veterinary Clinical Sciences</h4>
+    <h4>Assistant Professor, Department of Veterinary Clinical Sciences</h4>
 <p> <img src="images/Arnold.jpg" alt="arnold">
 
 <p>Dr. Arnold joined the Neurology team in August 2019 as a board-certified neurologist and neurosurgeon. She graduated from the School of Veterinary Medicine, University of Wisconsin-Madison in ___. Dr. Arnold then completed a small animal rotating internship at the University of Minnesota in 2016. She recently completed a residency in neurology and neurosurgery at the University of Georgia. (8.2016-8.2019)Dr. Arnold is particularly interested in canine neurosurgery and immunotherapy for brain tumors.</p>
