--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@ li a:hover {
 <ul>
   <li><a class="active" href="index.html">Home</a></li>
     <li><a href="our-team.html">Our Team</a></li>
-  <li><a href="services">Services</a></li>
+  <li><a href="services.html">Services</a></li>
   <li><a href="owners">Pet Owners</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
