--- a/services.html
+++ b/services.html
@@ -47,21 +47,24 @@ li a:hover {
 <p>Diagnosis and treatment for most neurological problems</p>
 <p><img src="images/VMC.jpg" width="300" height="300" alt="VMC"><img></p>  
 <h3>Examples of diseases our board-certified neurologists treat or manage</h3>
-    <p>Intervertebral disc disease (IVDD)</p> 
-    <p>Brain tumors</p>
-    <p>Cancers of the nervous system</p>
-    <p>Inflammatory disease (such as meningitis)</p>
-    <p>Epilepsy (seizures)</p>
-    <p>Vestibular disease</p>
+    <ul>
+    <li>Intervertebral disc disease (IVDD)</li> 
+    <li>Brain tumors</li>
+    <li>Cancers of the nervous system</li>
+    <li>Inflammatory disease (such as meningitis)</li>
+    <li>Epilepsy (seizures)</li>
+    <li>Vestibular disease</li>
+    </ul>
 <h3>Specialty Equipment:</h3>
-    <p>GE Signa HDxt 3.0T MRI scanner</p>
-    <p>Toshiba Aquilion 64 CT</p>
-    <p>Vetray Digital X-ray Machine</p>
-    <p>Nicollet Viking 4 electrodiagnostic machine</p>
-        <p>Electromyography</p>
-        <p>Nerve conduction studies</p>
-        <p>Brainstem auditory evoked response (BAER hearing tests)</p>
-    
+    <ul>
+    <li>GE Signa HDxt 3.0T MRI scanner</li>
+    <li>Toshiba Aquilion 64 CT</li>
+    <li>Vetray Digital X-ray Machine</li>
+    <li>Nicollet Viking 4 electrodiagnostic machine</li>
+        <li>Electromyography</li>
+        <li>Nerve conduction studies</li>
+        <li>Brainstem auditory evoked response (BAER hearing tests)</li>
+    </ul>
 <h3>Useful Information:</h3>
 <p>Patients are generally seen on a referral basis, but self-referrals are accepted. A neurologic assessment will be performed at the initial exam with one of our board-certified neurologists. After discussion with the clients regarding the recommended diagnostic and therapeutic plan, only initial blood work and radiographs may be performed on the same day. Any further diagnostics and/or surgeries will be scheduled to follow on a future date unless the appointment is an emergency.</p>
 
