--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@ li a:hover {
 <p>Daytime hours:</p> 
 <p>Monday - Friday: 8:00 am - 4:30 pm</p>
 <p>Emergency:</p>
-<p>If your pet needs immediate attention, our Emermency department is open 24 hours/day, 7 days/week</p>
+<p>If your pet needs immediate attention, our Emergency department is open 24 hours/day, 7 days/week</p>
 <p><img src="images/sah.jpg" width="300" height="400" alt="SAH"><img></p>  
 </body>
 </html>
