--- a/services.html
+++ b/services.html
@@ -60,13 +60,12 @@ li a:hover {
     <li>GE Signa HDxt 3.0T MRI scanner</li>
     <li>Toshiba Aquilion 64 CT</li>
     <li>Vetray Digital X-ray Machine</li>
-    <li>Nicollet Viking 4 electrodiagnostic machine
+        <li>Nicollet Viking 4 electrodiagnostic machine</li>
         <ul>
             <li>Electromyography</li>
             <li>Nerve conduction studies</li>
             <li>Brainstem auditory evoked response (BAER hearing tests)</li>
         </ul>
-        </li>
     </ul>   
 <h3>Useful Information:</h3>
 <p>Patients are generally seen on a referral basis, but self-referrals are accepted. A neurologic assessment will be performed at the initial exam with one of our board-certified neurologists. After discussion with the clients regarding the recommended diagnostic and therapeutic plan, only initial blood work and radiographs may be performed on the same day. Any further diagnostics and/or surgeries will be scheduled to follow on a future date unless the appointment is an emergency.</p>
