--- a/services.html
+++ b/services.html
@@ -45,14 +45,15 @@ li a:hover {
 <p>General neurology service (both medical and surgical)</p>
 <p>Diagnosis and treatment for most neurological problems</p>
 <h3>Examples of diseases our board-certified neurologists treat or manage</h3>
-    <ul><li>Intervertebral disc disease (IVDD)</li>
-    <li>Intervertebral disc disease (IVDD)</li> 
+    <ul>
+    <li>Intervertebral disc disease (IVDD)</li>
     <li>Brain tumors</li>
     <li>Cancers of the nervous system</li>
     <li>Inflammatory disease (such as meningitis)</li>
     <li>Epilepsy (seizures)</li>
     <li>Vestibular disease</li>
     </ul>
+<p> <img src="images/Mishka.jpg" alt="radiograph"> </p>
 <h3>Specialty Equipment:</h3>
     <ul>
     <li>GE Signa HDxt 3.0T MRI scanner</li>
