--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@ li a:hover {
 
 <body>
 <h2> Overview: </h2>
-<p>The Neurology Services at the University of Minnesota Veterinary Medical Center provides comprehensive specialty care to canine and feline patients with medical and surgical neurological conditions. These can include a range of disorders affecting the brain, spinal cord, nerves, and/or muscles. </p>
-<p><img src="images/VMC.jpg" width="300" height="300" alt="VMC"><img></p>  
+<p>The Neurology Services at the University of Minnesota Veterinary Medical Center provides comprehensive specialty care to canine and feline patients with medical and surgical neurological conditions. These can include a range of disorders affecting the brain, spinal cord, nerves, and/or muscles. <img src="images/VMC.jpg" width="300" height="300" alt="VMC" align="right"><img> </p>
+<p>Our Address is:
+1365 Gortner Ave
+St. Paul, MN 55108</p> 
 </body>
 </html>
