--- a/services.html
+++ b/services.html
@@ -53,7 +53,7 @@ li a:hover {
     <li>Epilepsy (seizures)</li>
     <li>Vestibular disease</li>
     </ul>
-<p> <img src="images/Mishka.jpg" alt="radiograph"> </p>
+<p> <img src="images/Mishka.png" alt="radiograph"> </p>
 <h3>Specialty Equipment:</h3>
     <ul>
     <li>GE Signa HDxt 3.0T MRI scanner</li>
