--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@ li a:hover {
 <h2> Services: </h2>
 <p>General neurology service (both medical and surgical)</p>
 <p>Diagnosis and treatment for most neurological problems</p>
-<h3>Examples of diseases our board-certified neurologists treat or manage</h3>
+<h3>Examples of diseases our board-certified neurologists treat or manage:</h3>
     <ul>
     <li>Intervertebral disc disease (IVDD)</li>
     <li>Brain tumors</li>
