--- a/contact.html
+++ b/contact.html
@@ -43,11 +43,15 @@ li a:hover {
 <body>
 <h2> Hours & Location </h2>
 <p>The Veterinary Medical Center is located on the University of Minnesota, Saint Paul campus next to the state fair grounds. Convenient and free parking is located just outside the hospital. See the reception desk for your parking permit.</p>
-<p>Small Animal Hospital, 1365 Gortner Avenue, St. Paul, MN 55108 </p>
+    <p><strong>Small Animal Hospital</strong></p>
+    <p>1365 Gortner Avenue</p>
+    <p>St. Paul, MN 55108</p>
 <p>Call us at 612-626-8387 (VETS) for questions, more information, or to schedule an appointment. No referral needed.</p>
-<p>Daytime hours:</p> 
+<p>&nbsp;</p>
+<p><strong>Daytime hours:</strong></p> 
 <p>Monday - Friday: 8:00 am - 4:30 pm</p>
-<p>Emergency:</p>
+<p>&nbsp;</p>
+<p><strong>Emergency:</strong></p>
 <p>If your pet needs immediate attention, our Emergency department is open 24 hours/day, 7 days/week</p>
 <p><img src="images/sah.jpg" width="300" height="400" alt="SAH"><img></p>  
 </body>
