changes to team
team change and maybe to banner

--- a/contact.html
+++ b/contact.html
@@ -36,13 +36,14 @@ li a:hover {
   <li><a href="services.html">Services</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
-  <title>Neurology Department</title>
+  <title><font color="white">Neurology Department</font></title>
   <link rel="stylesheet" type="text/css" href="CECT.css">
 </head>
 
 <body>
 <h2> Hours & Location </h2>
 <p>The Veterinary Medical Center is located on the University of Minnesota, Saint Paul campus next to the state fair grounds. Convenient and free parking is located just outside the hospital. See the reception desk for your parking permit.</p>
+<p>&nbsp;</p>
     <p><strong>Small Animal Hospital</strong></p>
     <p>1365 Gortner Avenue</p>
     <p>St. Paul, MN 55108</p>
