--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,10 @@ li a:hover {
 </head>
 
 <body>
+<div class="header">
+    <h1>Neurology Department</h1>
+    <p>Veterinary Medical Center</p>
+    </div>
 <h2> Hours & Location </h2>
 <p>The Veterinary Medical Center is located on the University of Minnesota, Saint Paul campus next to the state fair grounds. Convenient and free parking is located just outside the hospital. See the reception desk for your parking permit.</p>
 <p>&nbsp;</p>
