--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,13 @@ li a:hover {
 </head>
 
 <body>
-<div class="header">
+<div class="header" .header {
+    padding: 60px;
+    text-align: center
+    background: FFD700
+    color: white;
+    font size: 30px;
+}>
     <h1>Neurology Department</h1>
     <p>Veterinary Medical Center</p>
     </div>
