--- a/contact.html
+++ b/contact.html
@@ -41,14 +41,14 @@ li a:hover {
 </head>
 
 <body>
-<div class="header" .header {
+.header {
     padding: 60px;
-    text-align: center
-    background: FFD700
+    text-align: center;
+    background: FFD700;
     color: white;
     font size: 30px;
-}>
-    <h1>Neurology Department</h1>
+}
+<div class="header"><h1>Neurology Department</h1>
     <p>Veterinary Medical Center</p>
     </div>
 <h2> Hours & Location </h2>
