--- a/our-team.html
+++ b/our-team.html
@@ -41,6 +41,17 @@ li a:hover {
 </head>
 
 <body>
+.header {
+    padding: 60px;
+    text-align: center;
+    background: FFD700;
+    color: white;
+    font size: 30px;
+}
+<div class="header"><h1>Neurology Department</h1>
+    <p>Veterinary Medical Center</p>
+    </div>
+<p>&nbsp;</p>
 <h2>Clinicians</h2>
 
 <h3> Alistair McVey, DVM, DACVIM (Neurology)</h3>
