--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@ li a:hover {
 </head>
 
 <body>
+.header {
+    padding: 60px;
+    text-align: center;
+    background: FFD700;
+    color: white;
+    font size: 30px;
+}
+<div class="header"><h1>Neurology Department</h1>
+    <p>Veterinary Medical Center</p>
+    </div>
+<p>&nbsp;</p>
 <h2> Overview: </h2>
 <p>The Neurology Services at the University of Minnesota Veterinary Medical Center provides comprehensive specialty care to canine and feline patients with medical and surgical neurological conditions. These can include a range of disorders affecting the brain, spinal cord, nerves, and/or muscles. <img src="images/VMC.jpg" width="300" height="300" alt="VMC" align="right"><img> </p>
 <p>&nbsp;</p>
@@ -48,6 +59,6 @@ li a:hover {
     <p>1365 Gortner Ave</p>
     <p>St. Paul, MN 55108</p> 
 <p>&nbsp;</p>
-<p>Contact us at 612-626-8387 or browse the information on this website to find out more about our team, the services we provide, and what to expect scheduling a consultation with a neurologist. </p>
+<p>Contact us at 612-626-8387 or browse the information on this website to find out more about our team, the services we provide, and what to expect when scheduling a consultation with a neurologist. </p>
 </body>
 </html>
