--- a/services.html
+++ b/services.html
@@ -41,6 +41,17 @@ li a:hover {
 </head>
 
 <body>
+.header {
+    padding: 60px;
+    text-align: center;
+    background: FFD700;
+    color: white;
+    font size: 30px;
+}
+<div class="header"><h1>Neurology Department</h1>
+    <p>Veterinary Medical Center</p>
+    </div>
+<p>&nbsp;</p>
 <h2> Services: </h2>
 <p>General neurology service (both medical and surgical)</p>
 <p>Diagnosis and treatment for most neurological problems</p>
