--- a/services.html
+++ b/services.html
@@ -1,17 +1,14 @@
 <!doctype html>
-
-<body>
-
+<head>
+<title>Neurology Department</title>
+<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
 <ul>
   <li><a class="active" href="index.html">Home</a></li>
     <li><a href="our-team.html">Our Team</a></li>
   <li><a href="services.html">Services</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
-  <title>Neurology Department</title>
-  <link rel="stylesheet" type="text/css" href="CECT.css">
-</head>
-
 <body>
 <div class="header"><h1>Neurology Department</h1>
     <p>Veterinary Medical Center</p>
