--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,15 @@
 <!doctype html>
-
+<head>
+<title>Neurology Department</title>
+<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
 <ul>
   <li><a class="active" href="index.html">Home</a></li>
     <li><a href="our-team.html">Our Team</a></li>
   <li><a href="services.html">Services</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul> 
-  <title><font color="black">Neurology Department</font></title>
-  <link rel="stylesheet" type="text/css" href="CECT.css">
-
-<body>
 <div class="header"><h1>Neurology Department</h1>
     <p>Veterinary Medical Center</p>
     </div>
