--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!doctype html>
+<head>
+<title>Neurology Department</title>
+<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
 <body>
 <ul>
   <li><a class="active" href="index.html">Home</a></li>
@@ -6,9 +10,6 @@
   <li><a href="services.html">Services</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
-  <title>Neurology Department</title>
-  <link rel="stylesheet" type="text/css" href="CECT.css">
-    
 <div class="header"><h1>Neurology Department</h1>
     <p>Veterinary Medical Center</p>
     </div>
