--- a/our-team.html
+++ b/our-team.html
@@ -1,17 +1,15 @@
 <!doctype html>
+<head>
+<title>Neurology Department</title>
+<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
 <body>
-
 <ul>
   <li><a class="active" href="index.html">Home</a></li>
     <li><a href="#about">Our Team</a></li>
   <li><a href="services.html">Services</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
-  <title>Neurology Department</title>
-  <link rel="stylesheet" type="text/css" href="CECT.css">
-</head>
-
-<body>
 <div class="header"><h1>Neurology Department</h1>
     </div>
 <h2>Clinicians</h2>
