--- a/our-team.html
+++ b/our-team.html
@@ -11,7 +11,7 @@
   <li><a href="contact.html">Contact</a></li>
 </ul>
 <div class="header"><h1>Neurology Department</h1>
-    </div>
+    <p> at the University of Minnesota, Veterinary Medical Center, Small Animal Hospital</p></div>
 <h2>Clinicians</h2>
 
 <h3> Alistair McVey, DVM, DACVIM (Neurology)</h3>
@@ -27,7 +27,6 @@
 <p>Dr. Arnold joined the Neurology team in August 2019 as a board-certified neurologist and neurosurgeon. She graduated from the School of Veterinary Medicine, University of Wisconsin-Madison in 2014. Dr. Arnold then completed a small animal rotating internship at the University of Minnesota in 2016. She recently completed a residency in neurology and neurosurgery at the University of Georgia. Dr. Arnold is particularly interested in canine neurosurgery and immunotherapy for brain tumors.</p>
 <p>&nbsp;</p>
 <h2>Certified Veterinary Technicians</h2>
-<p>&nbsp;</p>
 <h3>Amber, CVT, VTS (Neurology)</h3>
 <p> <img src="images/carron.jpg" alt="Amber"> </p>
     
