--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
 </ul>
 <body>
 <div class="header"><h1>Neurology Department</h1>
-    <p>Veterinary Medical Center</p>
+    <p> at the University of Minnesota, Veterinary Medical Center, Small Animal Hospital</p>
     </div>
 <p>&nbsp;</p>
 <h2> Services: </h2>
