--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="header"><h1>Neurology Department</h1>
     <p>at the University of Minnesota, Veterinary Medical Center, Small Animal Hospital</p>
     </div>
-<h2> Overview: </h2>
+<h2> Overview </h2>
 <p>The Neurology Services at the University of Minnesota Veterinary Medical Center provides comprehensive specialty care to canine and feline patients with medical and surgical neurological conditions. These can include a range of disorders affecting the brain, spinal cord, nerves, and/or muscles. <img src="images/VMC.jpg" width="300" height="300" alt="VMC" align="right"><img> </p>
 <p>&nbsp;</p>
     <p><strong>Our Address is:</strong></p>
