--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
     <p> at the University of Minnesota, Veterinary Medical Center, Small Animal Hospital</p>
     </div>
 <p>&nbsp;</p>
-<h2> Services: </h2>
+<h2> Services </h2>
 <p>General neurology service (both medical and surgical)</p>
 <p>Diagnosis and treatment for most neurological problems</p>
 <h3>Examples of diseases our board-certified neurologists treat or manage:</h3>
