--- a/our-team.html
+++ b/our-team.html
@@ -18,24 +18,24 @@
 <h4>Associate Professor, Department of Veterinary Clinical Sciences </h4>
     <p> <img src="images/mcvey.png" width="189" height="266"  alt="mcvey"> </p>
 
-<p>Dr. McVey is the Neurology Department's chief of service and board-certified neurologist and neurosurgeon. He has more than thirty years of experience as a veterinarian and in addition to his clinical duties, he serves as a professor for the College of Veterinary Medicine students. Dr. McVey is interested in both medical and surgical neurology and has professional associations with the Honor Society of Agriculture, AVMA, and ACVIM.</p>
+<p>Dr. McVey is the Neurology Department's chief of service and a board-certified neurologist and neurosurgeon. He has more than thirty years of experience as a veterinarian and has been with the department for twenty-two years. In addition to his clinical duties, he serves as a professor for the College of Veterinary Medicine students. Dr. McVey is interested in both medical and surgical neurology and has professional associations with the Honor Society of Agriculture, AVMA, and ACVIM.</p>
 <p>&nbsp;</p>
 <h3>Susan Arnold, DVM, DACVIM (Neurology)</h3>
     <h4>Assistant Professor, Department of Veterinary Clinical Sciences</h4>
     <p> <img src="images/Arnold.jpg" width="189" height="266"  alt="arnold"> </p>
 
-<p>Dr. Arnold joined the Neurology team in August 2019 as a board-certified neurologist and neurosurgeon. She graduated from the School of Veterinary Medicine, University of Wisconsin-Madison in 2014. Dr. Arnold then completed a small animal rotating internship at the University of Minnesota in 2016. She recently completed a residency in neurology and neurosurgery at the University of Georgia. Dr. Arnold is particularly interested in canine neurosurgery and immunotherapy for brain tumors.</p>
+<p>Dr. Arnold joined the Neurology team in August 2019 as a board-certified neurologist and neurosurgeon. She graduated from the School of Veterinary Medicine, University of Wisconsin-Madison in 2014. Dr. Arnold worked at a private practice in Illinois, then completed a small animal rotating internship at the University of Minnesota in 2016. She completed a three-year residency in neurology and neurosurgery at the University of Georgia in 2019. Dr. Arnold is particularly interested in canine neurosurgery and immunotherapy for brain tumors and plans to continue her research on that subject.</p>
 <p>&nbsp;</p>
 <h2>Certified Veterinary Technicians</h2>
 <h3>Amber Carron, CVT, VTS (Neurology)</h3>
 <p> <img src="images/carron.jpg" width="189" height="266"  alt="Amber"> </p>
     
-<p>Amber joined the Neurology team in 2005. She has been a certified veterinary technician since 2001. In June 2011, she worked to obtain her Veterinary Technician Specialty (VTS) in Neurology, a rigorous application and exam documenting extensive knowledge of advanced competence in neurology. Amber is now one of nineteen technicians in the country who hold this specialized title. </p>
+<p>Amber joined the Neurology team in 2005. She has been a certified veterinary technician since 2001. In June 2011, she worked to obtain her Veterinary Technician Specialty (VTS) in Neurology, a rigorous application and exam documenting extensive knowledge of advanced competence in neurology. Amber is now one of nineteen technicians in the country who hold this specialized title. Her favorite aspect of neurology is neurosurgery and seeing a patient walk again by the removal of compression to the spinal cord.</p>
 <p>&nbsp;</p>
 <h3>Anna Engrem, CVT, VTS (Neurology)</h3>
 <p> <img src="images/engrem.jpg" width="189" height="266" alt="Anna"> </p>
     
-<p>Anna joined the Neurology team in 2003. She has been a certified veterinary technician since 1995. Anna also obtained her Veterinary Technician Specialty in Neurology in June 2011. The Neurology department is lucky to have two specialized technicians in their service.</p>
+<p>Anna joined the Neurology team in 2003. She has been a certified veterinary technician since 1995. Anna also obtained her Veterinary Technician Specialty in Neurology in June 2011. The Neurology department is lucky to have two specialized technicians in their service. Anna's favorite aspect of neurology is medical neurology, specifically inflammatory processes of the brain and spinal cord and their histopathology. Patients with inflammatory diagnoses require months to years of medical management, and Anna enjoys being a resource for clients who need support through that difficult period.</p>
 </body>
 
 </html>
