--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 <p>Monday - Friday: 8:00 am - 4:30 pm</p>
 <p>&nbsp;</p>
 <p><strong>Emergency:</strong></p>
-<p>If your pet needs immediate attention, our Emergency department (also located within the Small Animal Hospital) is open 24 hours/day, 7 days/week.</p>   
+<p>If your pet needs immediate attention, our Emergency Department (also located within the Small Animal Hospital) is open 24 hours/day, 7 days/week.</p>   
 <p><img src="images/sah.jpg" width="300" height="400" alt="SAH"><img></p>  
 </body>
 </html>
