Changes to index
adding interactive google map

--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     </div>
 <h2> Overview </h2>
 <p>The Neurology Service at the University of Minnesota Veterinary Medical Center provides comprehensive specialty care to canine and feline patients with medical and surgical neurological conditions. These can include a range of disorders affecting the brain, spinal cord, nerves, and/or muscles. <img src="images/VMC.jpg" width="300" height="300" alt="VMC" align="right"><img> </p>
-<p>&nbsp;</p>
-    <p><strong>Our Address is:</strong></p>
-    <p>1365 Gortner Ave</p>
-    <p>St. Paul, MN 55108</p> 
-<p>&nbsp;</p>
 <p>Contact us at 612-626-8387 or browse the information on this website to find out more about our team, the services we provide, and what to expect when scheduling a consultation with a neurologist. </p>
+<p><strong>Our Address is:</strong></p>
+<p>1365 Gortner Ave</p>
+<p>St. Paul, MN 55108</p> 
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2822.1264998492975!2d-93.1843701!3d44.981741299999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32c9d6b5917b3%3A0xd581b3a0c147a37!2sVeterinary%20Medical%20Center%20North%E2%80%93University%20of%20Minnesota!5e0!3m2!1sen!2sus!4v1574042732462!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 </body>
 </html>
