--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <title>Neurology Department</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<ul>
+<ul class="nav">
   <li><a class="active" href="index.html">Home</a></li>
     <li><a href="our-team.html">Our Team</a></li>
   <li><a href="services.html">Services</a></li>
