--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
+<html lang+"en">
 <head>
 <title>Neurology Department</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-<ul>
+<ul class="nav">
   <li><a class="active" href="index.html">Home</a></li>
     <li><a href="our-team.html">Our Team</a></li>
   <li><a href="services.html">Services</a></li>
