--- a/our-team.html
+++ b/our-team.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-<ul>
+<ul class="nav">
   <li><a class="active" href="index.html">Home</a></li>
     <li><a href="#about">Our Team</a></li>
   <li><a href="services.html">Services</a></li>
