--- a/services.html
+++ b/services.html
@@ -41,6 +41,7 @@
     </ul>   
 <h3>Useful Information:</h3>
 <p>Patients are generally seen on a referral basis, but self-referrals are accepted. A neurologic assessment will be performed at the initial exam with one of our board-certified neurologists. After discussion with the clients regarding the recommended diagnostic and therapeutic plan, only initial blood work and radiographs may be performed on the same day. Any further diagnostics and/or surgeries will be scheduled to follow on a future date unless the appointment is an emergency.</p>
+<h5>Neurologic Exam Video</h5>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/n_lnUbvvE6k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </body>
