--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <li><a href="services.html">Services</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
+<div class="banner"
+     <img class="banner-image" src="images/banner.jpg"
 <div class="header"><h1>Neurology Department</h1>
     <p>at the University of Minnesota, Veterinary Medical Center, Small Animal Hospital</p>
     </div>
