update home page
fixed error

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <li><a href="services.html">Services</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
-<div class="banner"
-     <img class="banner-image" src="images/banner.jpg"
+<div class="banner">
+     <img class="banner-image" src="images/banner.jpg"</div>
+    
 <h2> Overview </h2>
 <p>The Neurology Service at the University of Minnesota Veterinary Medical Center provides comprehensive specialty care to canine and feline patients with medical and surgical neurological conditions. These can include a range of disorders affecting the brain, spinal cord, nerves, and/or muscles. <img src="images/VMC.jpg" width="300" height="300" alt="VMC" align="right"><img> </p>
 <p>Contact us at 612-626-8387 or browse the information on this website to find out more about our team, the services we provide, and what to expect when scheduling a consultation with a neurologist. </p>
